# tap-superhuman

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yaml  test.yml  update_catalog.yaml  update_catalog.yml
scripts/: update_openapi.py
tap_coda/openapi/: openapi.json
tap_superhuman/: __init__.py  __main__.py  streams.py  tap.py
tap_superhuman/openapi/: __init__.py  openapi.json
tests/: __init__.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[columns].json  test_catalog_changes[docs].json  test_catalog_changes[formulas].json  test_catalog_changes[pages].json  test_catalog_changes[rows].json
