[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap-coda"
version = "0.0.1"
description = "Singer tap for Coda, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["ELT", "Coda"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["singer-sdk~=0.54.0a8"]

[project.scripts]
tap-coda = "tap_coda.tap:TapCoda.cli"

[dependency-groups]
dev = [{ include-group = "testing" }, { include-group = "typing" }]
testing = ["singer-sdk[testing]", "syrupy>=5.0.0"]
typing = [
    { include-group = "testing" },
    "mypy>=1.19",
    "ty>=0.0.21",
]

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 88
preview = true
required-version = ">=0.15"

[tool.ruff.lint]
ignore = [
    "DJ",     # flake8-django
    "FIX002", # line-contains-todo
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
    "ERA001", # commented-out-code
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_coda"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
min_version = "4.43"
requires = ["tox>=4.22", "tox-uv"]
env_list = ["typing", "py314", "py313"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = ["GITHUB_*", "TAP_CODA_*"]
dependency_groups = ["testing"]
commands = [
    [
        "pytest",
        { replace = "posargs", default = [
            "tests",
        ], extend = true },
    ],
]

[tool.tox.env.typing]
dependency_groups = ["testing", "typing"]
commands = [
    [
        "mypy",
        { replace = "posargs", default = [
            "tap_coda",
            "tests",
        ], extend = true },
    ],
    [
        "ty",
        "check",
        { replace = "posargs", default = [
            "tap_coda",
            "tests",
        ], extend = true },
    ],
]
