[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-superhuman"
description = "Singer tap for Superhuman Docs, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Coda",
  "ELT",
  "Superhuman",
]
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "singer-sdk~=0.55.0a1",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-superhuman = "tap_superhuman.tap:TapSuperhuman.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.24",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy>=1.19",
  "ty>=0.0.21",
  { include-group = "testing" },
]

[tool.hatch]
[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.ruff]
required-version = ">=0.15"
line-length = 88
preview = true
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [ "ANN" ]
per-file-ignores."tests/*" = [ "ANN", "S101" ]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [ "tap_superhuman" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "exhaustive-match",
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [ "-ra" ]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.53",
  "tox-uv>=1.35",
]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 13 },
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
labels = [ "check" ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_superhuman", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_superhuman", "tests" ], extend = true } ]
]
labels = [ "check" ]
[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on Python {py_dot_ver}"
dependency_groups = [ "testing" ]
pass_env = [ "GITHUB_*", "TAP_SUPERHUMAN_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
